fix z-index and image rendering

--- a/src/components/presenters/generic/card.scss
+++ b/src/components/presenters/generic/card.scss
@@ -25,24 +25,9 @@
   .image {
     position: relative;
     border-bottom: 4px solid #34495e;
-    //z-index: 1;
+    z-index: 1;
     height: 20rem;
     margin: 0;
-
-    &:before {
-      width: 0;
-      height: 0;
-      border-style: solid;
-      border-width: 20px 20px 0 20px;
-      border-color: #34495e transparent transparent transparent;
-      content: '';
-      position: absolute;
-      top: 100%;
-      left: 50%;
-      transform: translate(-50%, -15px);
-      //z-index: -1;
-      transition: all 0.35s ease;
-    }
 
     img {
       max-width: 100%;
